Fix class-varargs warnings in Windows builds
Categories
(Core :: General, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox102 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file, 1 obsolete file)
browser/components/shell/nsWindowsShellService.cpp(800,39): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
arguments.AppendPrintf("\"%S\" ", arg.get());
^
dom/media/webrtc/transport/third_party/nICEr/src/ice/ice_component.c(582,15): error: passing object of class type 'nr_transport_addr' (aka 'struct nr_transport_addr_') through variadic function [-Werror,-Wclass-varargs]
component->stream->turn_servers[j].turn_server.addr);
^
dom/bindings/BindingUtils.cpp(202,62): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
static_cast<unsigned>(errorNumber), funcNameStr.get(),
^
dom/bindings/BindingUtils.cpp(203,26): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
ifaceName.get());
^
gfx/thebes/gfxDWriteFontList.cpp(230,32): error: passing object of class type 'gfxFontEntry::StretchRange' (aka 'mozilla::StretchRange') through variadic function [-Werror,-Wclass-varargs]
weightString.get(), fe->Stretch(), psname.get(), fullname.get()));
^
gfx/thebes/gfxDWriteFontList.cpp(1718,36): error: passing object of class type 'gfxFontEntry::StretchRange' (aka 'mozilla::StretchRange') through variadic function [-Werror,-Wclass-varargs]
weightString.get(), fe->Stretch()));
^
security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp(409,11): error: passing object of class type 'const typename raw_type<char16_t, int>::type' (aka 'const char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
aRelativePath.get(), aAccess);
^
security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp(421,11): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
rulePath.get());
^
security/manager/ssl/nsNSSComponent.cpp(472,60): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
MOZ_LOG(gPIPNSSLog, LogLevel::Debug, ("our sid is '%S'", sid.get()));
^
toolkit/components/remote/RemoteUtils.h(21,36): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
aClassName.AppendPrintf("_%s", pfn.get());
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(447,59): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
LOG(("Extension lookup on '%s' with mimetype '%s'%s\n", fileExtension.get(),
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(481,26): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
flatType.get(), fileExtension.get()));
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(486,50): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
LOG(("Extension lookup on '%s' found: 0x%p\n", fileExtension.get(),
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(498,12): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
extensionFromMimeType.get(), miFromMimeType.get()));
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(514,10): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
extensionFromMimeType.get(), mi.get()));
^
xpcom/io/nsLocalFileWin.cpp(1647,20): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
NS_ConvertASCIItoUTF16(nsDependentCString(aField)).get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(44,45): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s is not registered.\n", aNames[i].get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(49,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(44,45): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s is not registered.\n", aNames[i].get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(49,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(248,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"JSON: %s\n", json.get());
^
widget/windows/GfxInfo.cpp(127,36): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
outStr.AppendPrintf("%S [ ", params.displayName.get());
^
| Assignee | ||
Comment 1•3 years ago
|
||
browser/components/shell/nsWindowsShellService.cpp(800,39): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
arguments.AppendPrintf(""%S" ", arg.get());
^
dom/media/webrtc/transport/third_party/nICEr/src/ice/ice_component.c(582,15): error: passing object of class type 'nr_transport_addr' (aka 'struct nr_transport_addr_') through variadic function [-Werror,-Wclass-varargs]
component->stream->turn_servers[j].turn_server.addr);
^
dom/bindings/BindingUtils.cpp(202,62): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
static_cast<unsigned>(errorNumber), funcNameStr.get(),
^
dom/bindings/BindingUtils.cpp(203,26): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
ifaceName.get());
^
gfx/thebes/gfxDWriteFontList.cpp(230,32): error: passing object of class type 'gfxFontEntry::StretchRange' (aka 'mozilla::StretchRange') through variadic function [-Werror,-Wclass-varargs]
weightString.get(), fe->Stretch(), psname.get(), fullname.get()));
^
gfx/thebes/gfxDWriteFontList.cpp(1718,36): error: passing object of class type 'gfxFontEntry::StretchRange' (aka 'mozilla::StretchRange') through variadic function [-Werror,-Wclass-varargs]
weightString.get(), fe->Stretch()));
^
security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp(409,11): error: passing object of class type 'const typename raw_type<char16_t, int>::type' (aka 'const char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
aRelativePath.get(), aAccess);
^
security/sandbox/win/src/sandboxbroker/sandboxBroker.cpp(421,11): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
rulePath.get());
^
security/manager/ssl/nsNSSComponent.cpp(472,60): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
MOZ_LOG(gPIPNSSLog, LogLevel::Debug, ("our sid is '%S'", sid.get()));
^
toolkit/components/remote/RemoteUtils.h(21,36): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
aClassName.AppendPrintf("_%s", pfn.get());
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(447,59): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
LOG(("Extension lookup on '%s' with mimetype '%s'%s\n", fileExtension.get(),
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(481,26): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
flatType.get(), fileExtension.get()));
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(486,50): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
LOG(("Extension lookup on '%s' found: 0x%p\n", fileExtension.get(),
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(498,12): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
extensionFromMimeType.get(), miFromMimeType.get()));
^
uriloader/exthandler/win/nsOSHelperAppService.cpp(514,10): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
extensionFromMimeType.get(), mi.get()));
^
xpcom/io/nsLocalFileWin.cpp(1647,20): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
NS_ConvertASCIItoUTF16(nsDependentCString(aField)).get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(44,45): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s is not registered.\n", aNames[i].get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(49,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(44,45): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s is not registered.\n", aNames[i].get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(49,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(248,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"JSON: %s\n", json.get());
^
widget/windows/GfxInfo.cpp(127,36): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic method [-Werror,-Wclass-varargs]
outStr.AppendPrintf("%S [ ", params.displayName.get());
^
| Assignee | ||
Comment 2•3 years ago
|
||
dom/bindings/BindingUtils.cpp(202,62): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
static_cast<unsigned>(errorNumber), funcNameStr.get(),
^
dom/bindings/BindingUtils.cpp(203,26): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
ifaceName.get());
^
dom/media/webrtc/transport/third_party/nICEr/src/ice/ice_component.c(582,15): error: passing object of class type 'nr_transport_addr' (aka 'struct nr_transport_addr_') through variadic function [-Werror,-Wclass-varargs]
component->stream->turn_servers[j].turn_server.addr);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(44,45): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s is not registered.\n", aNames[i].get());
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(49,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
^
toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp(248,30): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
wprintf(L"JSON: %s\n", json.get());
^
xpcom/io/nsLocalFileWin.cpp(1647,20): error: passing object of class type 'typename raw_type<char16_t, int>::type' (aka 'char16ptr_t') through variadic function [-Werror,-Wclass-varargs]
NS_ConvertASCIItoUTF16(nsDependentCString(aField)).get());
^
Updated•3 years ago
|
Comment 4•3 years ago
|
||
| bugherder | ||
Description
•