toolkit/xre/dllservices/tests/gtest/TestUntrustedModules.cpp
@@ -41,12 +41,12 @@ class ModuleLoadCounter final {
     for (size_t i = 0; i < N; ++i) {
       auto entry = mCounters.Lookup(aNames[i]);
       if (!entry) {
-        wprintf(L"%s is not registered.\n", aNames[i].get());
+        wprintf(L"%s is not registered.\n", static_cast<const wchar_t*>(aNames[i].get()));
         result = false;
       } else if (*entry != aCounts[i]) {
         // We can return false, but let's print out all unmet modules
         // which may be helpful to investigate test failures.
-        wprintf(L"%s:%4d\n", aNames[i].get(), *entry);
+        wprintf(L"%s:%4d\n", static_cast<const wchar_t*>(aNames[i].get()), *entry);
         result = false;
       }
     }
@@ -245,7 +245,7 @@ class UntrustedModulesFixture : public TelemetryTestFixture {
     EXPECT_TRUE(matchResult.isBoolean() && matchResult.toBoolean());
     if (!matchResult.isBoolean() || !matchResult.toBoolean()) {
       // If match failed, print out the actual JSON kindly.
-      wprintf(L"JSON: %s\n", json.get());
+      wprintf(L"JSON: %s\n", static_cast<const wchar_t*>(json.get()));
       wprintf(L"RE: %s\n", aPattern);
     }
   }
